syntax = "proto3";

package avlo;

service Swarm {
	// Create and return an IoT device based on a host
	// IP address and port number
	rpc JoinSwarm(IoTProcess) returns (IoTDevice) {}

	// Report devices as failed when they stop responding
	// to network messages
	rpc SuspectDevice(DeviceGroup) returns (SuspicionResponse) {}

	rpc ResurrectDevice(DeviceGroup) returns (SuspicionResponse) {}

	rpc StartCommunication(StartRequest) returns (stream SwarmMessage) {}

	rpc DeliverMessage(SwarmMessage) returns (DeliveryResponse) {}
}

message IoTProcess {
	required int32 ip_part1 = 1;
	required int32 ip_part2 = 2;
	required int32 ip_part3 = 3;
	required int32 ip_part4 = 4;
	required int32 port_number = 5;
}

message IoTDevice {
	required string device_id = 1;
	required IoTProcess owner = 2;
	repeated IoTProcess neighbour = 3;
}

message DeviceGroup {
	repeated string device_id = 1;
}

message SuspicionResponse {
	enum Suspicion {
		MARKED = 0;
		UNMARKED = 1;
	}
	Suspicion value = 1 [default = MARKED];
}

message StartRequest {
	
}